[package]
name = "monkey-rickroll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-format = "0.4.0"
rand = "0.8.5"
crossterm = "0.23.1"
fastrand = "1.7.0"

[[bin]]
name = "monkey-rickroll"
path = "main.rs"
